2010-10-17  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #15986: TYPO3_MODE check in localconf.php might break spriteCache 

2010-10-12  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #15980: doktype of page is not respected during localizing of a page (Thanks to Andreas Kiessling)

2010-10-12  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Generally updated several outdated parts of the manual
	* Fixed issue: #15957: TV does not honour TCAdefaults from PageTSconfig or UserTSconfig 

2010-10-11  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Follow-up to: #15775: Avoid that browser-cache issues cause too much confusion during upgrade (debug-mode dragdrop.js caused 404)

2010-10-10  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #15946: version comparison doesn't work on dev version of TYPO3_4-4 branch
	* Fixed bug: #15948: Content from PID message looks strange

2010-10-09  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #15908: access restriction for tv-objects in usergroup setting will be ignored
	* Fixed issue: #15933: "Create new Template Object" puts new TOs on wrong page
	* Fixed issue: #15943: tt_content move-to placeholder show up in the non-used CE list 

2010-10-08  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #15498: Use Flash Messages in wizard (Thanks to Benjamin Mack)

2010-10-07  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #15878: current value is not given to etypesextraformfields hook 
	* Fixed issue: #15926: Make template folder configurable 
	* Fixed issue: #15921: tx_templavoila_datastructureRepository->getAll() does not handle scope properly 

2010-10-06  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #15920: element icons don't show the id in their tooltips anymore 
	* Follow-up to: #15125: static DS not working in conjunction with TYPO3 caches - manual still contained some old references
	* Fixed bug: #15890: Editor is getting false flash message for missing rights 