@@ -1,3 +1,8 @@
+2010-10-19  Tolleiv Nietsch <nietsch@aoemedia.de> 
+
+	* Fixed issue: #15924: nested_fields register content is not correct  (Thanks to Frederik Rei)
+	* Fixed issue: #15896: Infection Warning by Avira AntiVir: HTML/Crypted.Gen
+
 2010-10-17  Tolleiv Nietsch <nietsch@aoemedia.de> 
 
 	* Fixed issue: #15986: TYPO3_MODE check in localconf.php might break spriteCache 
